--- a/index.html
+++ b/index.html
@@ -178,9 +178,8 @@
             </div>
 
 <div class="form-group">
-                <label>第1希望日</label>
-                <div class="form-group">
-                    <Datepicker v-model="datepicker1" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
+    <label for="first-choice-date">第1希望日</label>
+    <input v-model="datepicker1" placeholder="クリックして日時を入力" type="text" id="first-choice-date" placeholder="クリックして日時を入力">
 </div>
 
             <div class="form-group">
