--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     }
                 },
                 liffInit() {
-                    liff.init({ liffId: '1660745373-7WbRAVrn' })
+                    liff.init({ liffId: '2005254357-zKma9BZk' })
                         .then(() => {
                             if (!liff.isLoggedIn()) {
                                 liff.login();
