--- a/index.html
+++ b/index.html
@@ -171,124 +171,217 @@
                     <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'スポーツによる障害・外傷' ? 'check' : ''" for="seven">
                         <input name="place" value="スポーツによる障害・外傷" type="radio" required v-model="syoujou" id="seven">スポーツによる障害・外傷
                     </label>
-                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'インナーマッスル強化' ? 'check' : ''" for="eight">
-                        <input name="place" value="インナーマッスル強化" type="radio" required v-model="syoujou" id="eight">インナーマッスル強化
-                    </label>
-                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'その他' ? 'check' : ''" for="nine">
-                        <input name="place" value="その他" type="radio" required v-model="syoujou" id="nine">その他
+                    <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'その他' ? 'check' : ''" for="eight">
+                        <input name="place" value="その他" type="radio" required v-model="syoujou" id="eight">その他
                     </label>
                 </div>
             </div>
 
-            <!-- date -->
+<div class="form-group">
+    <label for="first-choice-date">第1希望日</label>
+    <input v-model="datepicker1" type="text" id="first-choice-date"  format="yyyy年MM月dd日" placeholder="クリックして日時を入力">
+</div>
+
             <div class="form-group">
-                <label>第１希望日</label>
-                <vue-datepicker v-model="datepicker1" :input-props="{'readonly': true}" format="YYYY-MM-DD" />
-            </div>
-            <!-- time -->
-            <div class="form-group">
-                <label>第１希望時間</label>
-                <input v-model="time1" id="time1" type="text" name="希望時間1" class="form-control flatpickr" placeholder="時間を選択してください" required>
+                <label>第1希望時間</label>
+                <select v-model="datepicker1time" class="form-control">
+                    <option disabled value="">選択してください</option>
+                    <option>9:00</option>
+                    <option>10:00</option>
+                    <option>11:00</option>
+                    <option>12:00</option>
+                    <option>13:00</option>
+                    <option>14:00</option>
+                    <option>15:00</option>
+                    <option>16:00</option>
+                    <option>17:00</option>
+                </select>
             </div>
 
             <div class="form-group">
-                <label>第２希望日</label>
-                <vue-datepicker v-model="datepicker2" :input-props="{'readonly': true}" format="YYYY-MM-DD" />
-            </div>
-            <!-- time -->
-            <div class="form-group">
-                <label>第２希望時間</label>
-                <input v-model="time2" id="time2" type="text" name="希望時間2" class="form-control flatpickr" placeholder="時間を選択してください">
+                <label>第2希望日</label>
+                <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
             </div>
 
             <div class="form-group">
-                <label>第３希望日</label>
-                <vue-datepicker v-model="datepicker3" :input-props="{'readonly': true}" format="YYYY-MM-DD" />
-            </div>
-            <!-- time -->
-            <div class="form-group">
-                <label>第３希望時間</label>
-                <input v-model="time3" id="time3" type="text" name="希望時間3" class="form-control flatpickr" placeholder="時間を選択してください">
+                <label>第2希望時間</label>
+                <select v-model="datepicker2time" class="form-control">
+                    <option disabled value="">選択してください</option>
+                    <option>9:00</option>
+                    <option>10:00</option>
+                    <option>11:00</option>
+                    <option>12:00</option>
+                    <option>13:00</option>
+                    <option>14:00</option>
+                    <option>15:00</option>
+                    <option>16:00</option>
+                    <option>17:00</option>
+                </select>
             </div>
 
-            <button class="regist" @click="done">予約</button>
+            <div class="form-group">
+                <label>第3希望日</label>
+                <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
+            </div>
+
+            <div class="form-group">
+                <label>第3希望時間</label>
+                <select v-model="datepicker3time" class="form-control">
+                    <option disabled value="">選択してください</option>
+                    <option>9:00</option>
+                    <option>10:00</option>
+                    <option>11:00</option>
+                    <option>12:00</option>
+                    <option>13:00</option>
+                    <option>14:00</option>
+                    <option>15:00</option>
+                    <option>16:00</option>
+                    <option>17:00</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>メッセージ</label>
+                <textarea v-model="message" name="customer_message" class="form-control" required rows="6"></textarea>
+            </div>
+
+            <input type="button" @click="done()" value="予約内容を送信する" class="btn btn-primary regist">
         <!-- </form> -->
     </div>
 </section>
-
-<script type="module">
-import VueDatePicker from 'https://cdn.jsdelivr.net/npm/@vuepic/vue-datepicker@latest/dist/main.js'
-import 'https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.js'
-import { Japanese } from "https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ja.js"
-
-const { createApp } = Vue
-createApp({
-  components: {
-    'vue-datepicker': VueDatePicker
-  },
-  data() {
-    return {
-      datepicker1: null,
-      datepicker2: null,
-      datepicker3: null,
-      name: '',
-      tel: '',
-      number: '',
-      syoujou: '',
-      time1: '',
-      time2: '',
-      time3: ''
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script>
+async function updateAvailability(year, month) {
+  const response = await fetch(`https://script.google.com/macros/s/AKfycbyKeZtzzggmyJPl53BJEtac43BIBuRuk0kVt3SoFPOJ2MeTRQ_NlGca2vOycYlAleUKhA/exec?year=${year}&month=${month}`);
+  const availability = await response.json();
+  
+  document.querySelectorAll('.flatpickr-day').forEach(function(dayElem) {
+    const date = dayElem.dateObj;
+    const dateString = date.toISOString().split('T')[0];
+    if (availability[dateString]) {
+      const badge = document.createElement('div');
+      badge.className = 'availability-badge';
+      badge.textContent = availability[dateString];
+      dayElem.appendChild(badge);
     }
+  });
+}
+
+flatpickr("#first-choice-date", {
+  onMonthChange: function(selectedDates, dateStr, instance) {
+    const year = instance.currentYear;
+    const month = instance.currentMonth;
+    updateAvailability(year, month);
   },
-  mounted() {
-    flatpickr(this.$refs.time1, {
-      locale: Japanese,
-      enableTime: true,
-      noCalendar: true,
-      dateFormat: "H:i",
-      time_24hr: true
-    });
-    flatpickr(this.$refs.time2, {
-      locale: Japanese,
-      enableTime: true,
-      noCalendar: true,
-      dateFormat: "H:i",
-      time_24hr: true
-    });
-    flatpickr(this.$refs.time3, {
-      locale: Japanese,
-      enableTime: true,
-      noCalendar: true,
-      dateFormat: "H:i",
-      time_24hr: true
-    });
+  onYearChange: function(selectedDates, dateStr, instance) {
+    const year = instance.currentYear;
+    const month = instance.currentMonth;
+    updateAvailability(year, month);
   },
-  methods: {
-    done() {
-      if (this.datepicker1 && this.time1) {
-        const message = `
-        お客様名（カタカナ）: ${this.name}\n
-        電話番号: ${this.tel}\n
-        ご来店回数: ${this.number}\n
-        症状: ${this.syoujou}\n
-        第1希望日: ${this.datepicker1} ${this.time1}\n
-        第2希望日: ${this.datepicker2} ${this.time2}\n
-        第3希望日: ${this.datepicker3} ${this.time3}\n
-        `;
-        liff.sendMessages([{
-          type: 'text',
-          text: message
-        }]).then(() => {
-          liff.closeWindow();
-        }).catch((error) => {
-          console.error('Error sending message:', error);
-        });
-      } else {
-        alert('第1希望日と第1希望時間を選択してください');
-      }
-    }
+  onReady: function(selectedDates, dateStr, instance) {
+    const year = instance.currentYear;
+    const month = instance.currentMonth;
+    updateAvailability(year, month);
+  },
+  onChange: function(selectedDates) {
+    app.datepicker1 = selectedDates[0];
+    console.log("Selected date: ", selectedDates[0]);
   }
-}).mount('#app')
+});
+
+const { createApp } = Vue;
+const app = createApp({
+    data() {
+        return {
+            datepicker1: '',
+            datepicker2: '',
+            datepicker3: '',
+            datepicker1time: '',
+            datepicker2time: '',
+            datepicker3time: '',
+            name: "",
+            syoujou: "",
+            number: "",
+            tel: "",
+            message: ""
+        }
+    },
+    methods: {
+        async done() {
+            console.log("Sending message...");
+            console.log("datepicker1: ", this.datepicker1);
+
+            var date1 = new Date(this.datepicker1);
+            var date2 = new Date(this.datepicker2);
+            var date3 = new Date(this.datepicker3);
+
+            var datetime1 = date1.getFullYear() + "年" + (date1.getMonth() + 1) + "月" + date1.getDate() + "日 " + this.datepicker1time;
+            var datetime2 = date2.getFullYear() + "年" + (date2.getMonth() + 1) + "月" + date2.getDate() + "日 " + this.datepicker2time;
+            var datetime3 = date3.getFullYear() + "年" + (date3.getMonth() + 1) + "月" + date3.getDate() + "日 " + this.datepicker3time;
+
+            var date = "";
+
+            if (this.datepicker1 !== "" && this.datepicker1time !== ""){
+                date = date + "\n" +  datetime1 
+            }
+            if (this.datepicker2 !== "" && this.datepicker2time !== ""){
+                date = date + "\n" +  datetime2
+            }
+            if (this.datepicker3 !== "" && this.datepicker3time !== ""){
+                date = date + "\n" +  datetime3
+            }
+
+            try {
+                await liff.sendMessages([
+                    {
+                        type: "text",
+                        text: "【予約フォーム】" + "\n" + "お名前：" + this.name + "\n" + "電話番号：" + this.tel + "\n" + "症状：" + this.syoujou + "\n" + "来院有無：" + this.number  + "\n" + "希望日時：" + date + "\n" + "メッセージ：" + this.message,
+                    },
+                ]);
+                console.log("Message sent successfully");
+            } catch (err) {
+                console.error("Error sending message:", err);
+                alert("Error sending message");
+            } finally {
+                liff.closeWindow();
+            }
+        }
+    },
+    async mounted() {
+        try {
+            await liff.init({
+                liffId: "2005254357-zKma9BZk"
+            });
+            if (liff.isLoggedIn()) {
+                console.log("Logged in");
+            } else {
+                liff.login();
+            }
+        } catch (err) {
+            console.error("LIFF init error:", err);
+        }
+    }
+}).mount('#app');
+
+flatpickr("#first-choice-date", {
+  onMonthChange: function(selectedDates, dateStr, instance) {
+    const year = instance.currentYear;
+    const month = instance.currentMonth;
+    updateAvailability(year, month);
+  },
+  onYearChange: function(selectedDates, dateStr, instance) {
+    const year = instance.currentYear;
+    const month = instance.currentMonth;
+    updateAvailability(year, month);
+  },
+  onReady: function(selectedDates, dateStr, instance) {
+    const year = instance.currentYear;
+    const month = instance.currentMonth;
+    updateAvailability(year, month);
+  },
+  onChange: function(selectedDates) {
+    app.datepicker1 = selectedDates[0];
+    console.log("Selected date: ", selectedDates[0]);
+  }
+});
 </script>
-</body>
-</html>
