--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <div class="form-group">
     <label for="first-choice-date">第1希望日</label>
-    <input v-model="datepicker1" type="text" id="first-choice-date"  format="yyyy年MM月dd日" placeholder="クリックして日時を入力">
+                <Datepicker v-model="datepicker1" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-week-days="[0]"></Datepicker>
 </div>
 
             <div class="form-group">
