--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             <button type="button" id="sanmr" onclick="selectmr(this)">その他</button> <!-- 2回目以降来院ボタン -->
         </div>
 
-        <input type="text" id="name" placeholder="【その他】を選択された方はご記入ください"> <!-- 名前入力フィールド -->
+        <input type="text" id="others" placeholder="【その他】を選択された方はご記入ください"> <!-- 名前入力フィールド -->
 
         <div class="label">面談希望場所※任意</div>
         <div class="visit-buttons">
@@ -315,7 +315,7 @@
             <button type="button" id="yonVisit" onclick="selectVisit(this)">出張面談希望</button> <!-- 2回目以降来院ボタン -->
         </div>
 
-        <input type="text" id="name" placeholder="【出張面談希望】を選択された方はご記入ください"> <!-- 名前入力フィールド -->
+        <input type="text" id="business" placeholder="【出張面談希望】を選択された方はご記入ください"> <!-- 名前入力フィールド -->
 
         <div class="label">お問い合わせ内容</div>
         <textarea id="message" rows="4" placeholder="お問い合わせ内容を入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -414,8 +414,6 @@
             const phone = document.getElementById('phone').value;
             const others = document.getElementById('others').value;
             const business = document.getElementById('business').value;
-            const date1 = formatDate(document.getElementById('date1').value);
-            const date2 = formatDate(document.getElementById('date2').value);
             const message = document.getElementById('message').value;
 
             /* フォームデータをオブジェクトにまとめる */
@@ -426,9 +424,6 @@
                 business,
                 visitCount,
                 mrCount,
-                selectedSymptom,
-                irradiationsCount,
-                dates: [date1, date2],
                 message
             };
 
