--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #7f0019;
+            background-color: #583962;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,130 +106,112 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #06c755;
+            background-color: #4d6a78;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
         }
 
-.calendar-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-    position: relative;
-    width: 100%;
-}
+        .calendar-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            /* カレンダーを中央に配置 */
+            margin-bottom: 20px;
+            position: relative;
+            width: 106%;
+            /* 横幅を広げる */
+            margin-left: -7%;
+            /* 親要素の中心にカレンダーを配置 */
+        }
 
-.calendar {
-    flex: 1;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    width: 100%;
-}
+        .calendar {
+            flex: 1;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            /* 横スクロールを防ぐ */
+            width: 106%;
+        }
 
-.calendar table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed; /* セル幅を均等にする */
-}
+        .calendar table {
+            width: 100%;
+            border-collapse: collapse;
+        }
 
-.calendar th,
-.calendar td {
-    text-align: center;
-    padding: 5px;
-    cursor: pointer;
-    vertical-align: top;
-    width: auto; /* 通常のセルは自動調整 */
-    box-sizing: border-box;
-    border: 1px solid #000;
-}
+        .calendar th,
+        .calendar td {
+            text-align: center;
+            padding: 5px;
+            cursor: pointer;
+            vertical-align: top;
+            width: 14.28%;
+            /* 7日間が一列に収まるように設定 */
+            box-sizing: border-box;
+            border: 1px solid #000;
+            /* ここで区切り線を追加 */
+        }
 
-.calendar td {
-    font-size: 12px; /* お好みのサイズに変更 */
-}
+        .calendar th {
+            background-color: #f7f7f7;
+            /* カレンダーのヘッダー部分の背景色を薄いグレーに設定 */
+        }
 
-.calendar th {
-    text-align: left; /* 左寄せにする */
-    padding-left: 5px; /* 左に少し余白を作る */
-}
+        .calendar td:hover {
+            background-color: #ddd;
+            /* カレンダーのセルにマウスを乗せたときの背景色を少し濃いグレーに設定 */
+        }
 
-/* 左端のセルだけ幅を少し広げる */
-.calendar th:first-child,
-.calendar td:first-child {
-    width: 16%;
-}
+        .calendar td.selected {
+            background-color: #13ca5e;
+            /* 選択されたカレンダーのセルの背景色を緑色に設定 */
+            color: #fff;
+            /* 選択されたセルのテキスト色を白に設定 */
+        }
 
-.calendar th {
-    background-color: #f7f7f7;
-}
+        .week-button-container {
+            display: flex;
+            /* 子要素を横方向に並べるためにflexboxを使用 */
+            justify-content: space-between;
+            /* 子要素を左右に均等に配置 */
+            align-items: center;
+            /* 子要素を縦方向の中央に揃える */
+            width: 100%;
+            /* コンテナの幅を100%に設定 */
+            margin-bottom: 10px;
+            /* 下に10pxのマージンを追加 */
+        }
 
-.calendar td:hover {
-    background-color: #ddd;
-}
+        .week-button {
+            padding: 10px 20px;
+            /* 上下10px、左右20pxの内側の余白を追加 */
+            background-color: #444;
+            /* ボタンの背景色を濃いグレーに設定 */
+            color: #fff;
+            /* ボタンのテキスト色を白に設定 */
+            border: none;
+            /* ボタンの境界線を削除 */
+            border-radius: 4px;
+            /* ボタンの角を4pxの半径で丸める */
+            cursor: pointer;
+            /* マウスカーソルをポインター（指の形）に変更 */
+            margin-left: 31px;
+            /* 左側に20pxの余白を追加して右にずらす */
+        }
 
-.calendar td.selected {
-    background-color: #13ca5e;
-    color: #fff;
-}
-
-.week-button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.week-button {
-    padding: 10px 20px;
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.month-button-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.month-button {
-    padding: 10px 20px;
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.current-month {
-    font-size: 16px;
-    font-weight: bold;
-    color: #444;
-    margin-top: 10px; /* 下にずらす */
-    display: inline-block; /* margin-top を適用しやすくする */
-}
-
-    .calendar th {
-        text-align: center; /* 中央揃え */
-        padding-left: 0; /* 左寄せを解除 */
-        font-size: 12px; /* 文字サイズを少し小さく */
-    }
-
-    .calendar td {
-        text-align: center; /* 中央揃え */
-        font-size: 12px; /* セルの文字サイズも調整 */
-        padding: 3px; /* 余白を減らしてコンパクトに */
-    }
+        .current-month {
+            font-size: 14px;
+            /* フォントサイズを16pxに設定 */
+            font-weight: bold;
+            /* テキストを太字に設定 */
+            color: #444;
+            /* テキストの色を濃いグレーに設定 */
+            margin-left: 30px;
+            /* 10pxだけ右にずらす */
+        }
 
         .loading-spinner {
             position: fixed;
@@ -348,36 +330,39 @@
 
         .info-text {
             margin-top: 20px;
-            /* 下にずらすスペース */
+            /* 上の余白 */
+            margin-bottom: 10px;
+            /* 下に白い隙間を追加 */
             font-size: 13px;
-            /* 読みやすいサイズ */
             color: #000000;
-            /* 説明文らしい落ち着いた色 */
             line-height: 1.5;
-            /* テキスト間の高さを適切に設定 */
             text-align: center;
-            /* 中央揃え */
             word-wrap: break-word;
-            /* 長いテキストの折り返しを強制 */
+            background-color: #eef9f5;
+            /* 青っぽい背景色を追加 */
+            padding: 10px;
+            border-radius: 4px;
         }
 
         /* 携帯端末向けのレスポンシブデザイン */
         @media (max-width: 768px) {
             .info-text {
-                font-size: 10px;
+                font-size: 11.5px;
                 /* スマホでは少し小さく */
-                margin-top: 15px;
+                margin-top: 10px;
                 /* 上下のマージンを調整 */
-                line-height: 1.4;
+                line-height: 2.0;
                 /* テキストの高さ調整 */
             }
         }
+        
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>開運いすずサロン<br>電話占い予約フォーム</h1>
+        <h1>モイスティーヌ武蔵ヶ丘サロン<br>渡邊予約フォーム
+        </h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -393,9 +378,11 @@
         <div class="label">メニューをお選びください</div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)" data-price="15000">電話占い新規様15000円</button>
-            <button type="button" onclick="selectSymptom(this)" data-price="10000">電話占いリピーター様10000円</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">afterフォロー</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">スキンケア体験</button>
+            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">カウンセリング</button>
         </div>
+
 
         <div class="label">希望日時</div>
         <div class="calendar-container">
@@ -452,7 +439,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: ''
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -478,8 +465,9 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '電話占い新規様15000円': 90,
-            '電話占いリピーター様10000円': 90
+            'afterフォロー': 90,
+            'スキンケア体験': 120,
+            'カウンセリング': 60
         };
 
 
@@ -515,7 +503,7 @@
 
             // displayInfo要素に情報を表示
             document.getElementById('displayInfo').innerHTML = `
-        <p>・<span style="color:red;"><strong>お名前</strong></span>：${name}</p>
+        <p>・<span style="color:#13ca5e;"><strong>お名前</strong></span>：${name}</p>
         <hr>
         <p>${visitCountText}</p>
         <hr>
@@ -524,8 +512,6 @@
         <p>${totalTimeText}</p>
         <hr>
         <p>${selectedDateText}</p>
-        <hr>
-        <p>${totalAmountText}</p>
         <hr>
     `;
         }
@@ -756,7 +742,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【電話予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【渡邊指名予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
@@ -788,7 +774,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycby1KsY23a8hZBR9PMiH7-vLXR8XV0jyloplY1PqgUxeIcgHp_euGWddlTltLULs8GrW/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
@@ -829,9 +815,7 @@
                 '15:00', '15:30',
                 '16:00', '16:30',
                 '17:00', '17:30',
-                '18:00', '18:30',
-                '19:00', '19:30',
-                '20:00', '20:30', '21:00'
+                '18:00'
             ];
 
             if (table.rows.length === 0) {
@@ -908,17 +892,6 @@
                         continue;
                     }
 
-                    // 18時以降に終了する予約を不可にする (17:30は可)
-                    if (slotEnd.getHours() === 21 && slotEnd.getMinutes() > 00) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    } else if (slotEnd.getHours() > 21) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                        continue;
-                    }
-
                     // ここで終了時間を使った条件処理を行う
                     // 例えば、リアルタイムで既に過ぎた時間帯は×にする
                     if (slotStart < now) {
@@ -962,15 +935,8 @@
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
-                    // 月・水の15:01~19:29は✕にする（優先的にチェック）
-                    if ((slotStart.getDay() === 1 || slotStart.getDay() === 3) && 
-                        (slotStart.getHours() > 15 || (slotStart.getHours() === 15 && slotStart.getMinutes() >= 0)) &&
-                        (slotStart.getHours() < 19 || (slotStart.getHours() === 19 && slotStart.getMinutes() <= 29))) {
-                        cell.textContent = '✕';
-                        cell.classList.add('unavailable');
-                    }
-                    // 日曜日、火曜日、木曜日、金曜日、土曜日で、営業日ではない場合
-                    else if ([0, 2, 4, 5, 6].includes(slotStart.getDay()) && !isBusinessDay && businessEventTimes.length === 0) {
+                    // 日曜日で、営業日ではない場合
+                    else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
